--- a/src/pages/auth/sign-in/ui/styles.module.css
+++ b/src/pages/auth/sign-in/ui/styles.module.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100%;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 .geometric {
@@ -12,7 +13,6 @@
   margin-bottom: 16px;
   background-image: url("../assets/geometric-mobile.svg");
   background-position: center;
-  background-repeat: no-repeat;
 }
 
 .header {
@@ -100,7 +100,7 @@
   .geometric {
     width: 100%;
     max-width: 768px;
-    height: 100%;
+    height: auto;
     order: 1;
     margin-bottom: 0;
     background-image: url("../assets/geometric-desktop.svg");
